Client re-structorisation, Prapare screen mode introduced, styling start

--- a/src/js/ui/controls/scrollbars.less
+++ b/src/js/ui/controls/scrollbars.less
@@ -1,11 +1,11 @@
-@import "~css/mixins.less";
+//@import "~css/mixins.less";
 
 .r-scroll {
     padding: 0 !important;
-    ._absoluteFiller();
+//    ._absoluteFiller();
 
     .r-scroll-container {
-        ._absoluteFiller();
+//        ._absoluteFiller();
 
         overflow: hidden;
 
@@ -84,7 +84,7 @@ touch-action: pan-down
             margin-left: -7px;
             margin-top: -5px;
             border-radius: 5px;
-            border: 1px solid @color-black;
+            border: 1px solid black;//@color-black;
             background-color: gray;
             cursor: move;
             cursor: ew-resize;
