--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -1,3 +1,7 @@
+.cursorable {
+  cusror: pointer;
+}
+
 .folders_list_container {
 }
 
@@ -32,4 +36,18 @@
 }
 
 .prepare_preview_page {
+}
+
+
+//------------------
+.card_square_img {
+  padding-top:100%; // to keep it squiare;
+  background-position: center center;
+  background-size:cover;
+}
+
+.card_text_h_limit {
+  line-height: 1.2em;
+  max-height: 6em;
+  overflow: hidden;
 }
