--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,6 +3,7 @@ $font-family-sans-serif: "Nunito", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
+/*
 // Colors
 $blue: #3490dc;
 $indigo: #6574cd;
@@ -14,7 +15,8 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+*/
 
 // Body
-$body-bg: $cyan;
+$body-bg: white;
 
