--- a/src/templates/third/page3.hbs
+++ b/src/templates/third/page3.hbs
@@ -12,20 +12,19 @@
         line-height: 1.6;
         text-align: left;
 
-        background-color: #d7e6ff;
+        background-color: #e4ffde;
         font-size:14pt;
-//        font-family: "Times New Roman";
-        font-family: Helvetica, Arial, sans-serif;
+        font-family: "Comic Sans MS";
     }
 
     .img0 {
         display:block;
         width:70%;
-        margin:0 auto;
+        margin:0 0 0 auto;
     }
 
     .post {
-        font-size: {{{percent 0.9 config.post_font_size}}}em;
+        font-size: {{{percent 1.1 config.post_font_size}}}em;
     }
 
     .tmplname {
@@ -44,5 +43,5 @@
         <img src='{{media_url}}' class='img0' alt=''/>
         {{{page_break}}}
         <div class='post'>{{{post}}}</div>
-    <div class='tmplname'>Template 1</div>
+    <div class='tmplname'>Third</div>
 </div>
