--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,7 +1,9 @@
 // Variables
 @import 'variables';
 
-@import 'styles';
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+@import 'forms';
+@import 'styles';
+
