--- a/src/scss/_bootstrap_extends.scss
+++ b/src/scss/_bootstrap_extends.scss
@@ -1,8 +1,9 @@
-.card-body {
-  flex: 1 1 auto;
-  /* margin: 1.25rem; */
-  padding-top: 70%;
+.prepare_page.card .card-body {
+  ///**/flex: 1 1 auto;
+  margin: 1.25rem;
+  padding-top: 144%;   // (paper height/paper width) * 100
   position: relative;
+
 }
 
 .card-img {
