Add new libs + AdminTools

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -113,6 +113,10 @@ $preview_box_scale: .5;
   }
 }
 
+.admin_tools_preview{
+  margin:0 -25mm -30mm 0;
+}
+
 //----- template css overwrite
 .prepare_preview_page .body {
   overflow: visible;
